--- a/Exercise_form/App.config
+++ b/Exercise_form/App.config
@@ -6,7 +6,11 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_IService_stu" />
+                <binding name="BasicHttpBinding_IService_stu" maxBufferPoolSize="1048576"
+                    maxBufferSize="1048576" maxReceivedMessageSize="1048576">
+                    <readerQuotas maxStringContentLength="1048576" maxArrayLength="1048576"
+                        maxBytesPerRead="1048576" />
+                </binding>
             </basicHttpBinding>
         </bindings>
         <client>
