--- a/WCFDBservice/Web.config
+++ b/WCFDBservice/Web.config
@@ -30,5 +30,16 @@
   </entityFramework>
   <system.serviceModel>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" />
+
+    <bindings>
+      <webHttpBinding>
+        <binding
+          maxBufferPoolSize="1048576"
+          maxReceivedMessageSize="1048576"
+          maxBufferSize="1048576" transferMode="Streamed">
+        </binding>
+      </webHttpBinding>
+    </bindings>
+    
   </system.serviceModel>
 </configuration>
