--- a/Exercise_form/Exercise_form.csproj
+++ b/Exercise_form/Exercise_form.csproj
@@ -69,11 +69,23 @@
     <Compile Include="addmq.Designer.cs">
       <DependentUpon>addmq.cs</DependentUpon>
     </Compile>
+    <Compile Include="classinfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="classinfo.Designer.cs">
+      <DependentUpon>classinfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MianWindows.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MianWindows.Designer.cs">
+      <DependentUpon>MianWindows.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -87,11 +99,23 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Uptatamcq.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Uptatamcq.Designer.cs">
+      <DependentUpon>Uptatamcq.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="addmq.resx">
       <DependentUpon>addmq.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="classinfo.resx">
+      <DependentUpon>classinfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MianWindows.resx">
+      <DependentUpon>MianWindows.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -102,6 +126,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Uptatamcq.resx">
+      <DependentUpon>Uptatamcq.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
