--- a/WCFDBservice/Web.config
+++ b/WCFDBservice/Web.config
@@ -18,9 +18,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings>
-    <add name="db_exerciseEntities" connectionString="metadata=res://*/questions.csdl|res://*/questions.ssdl|res://*/questions.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SPU1536-0003\SQL2012;initial catalog=db_exercise;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="db_exerciseEntities" connectionString="metadata=res://*/questions.csdl|res://*/questions.ssdl|res://*/questions.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SPU1536-0003\SQL2012;initial catalog=db_exercise;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -33,10 +31,7 @@
 
     <bindings>
       <webHttpBinding>
-        <binding
-          maxBufferPoolSize="1048576"
-          maxReceivedMessageSize="1048576"
-          maxBufferSize="1048576" transferMode="Streamed">
+        <binding maxBufferPoolSize="1048576" maxReceivedMessageSize="1048576" maxBufferSize="1048576" transferMode="Streamed">
         </binding>
       </webHttpBinding>
     </bindings>
