--- a/Exercise_form/App.config
+++ b/Exercise_form/App.config
@@ -1,22 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_IService_stu" maxBufferPoolSize="1048576"
-                    maxBufferSize="1048576" maxReceivedMessageSize="1048576">
-                    <readerQuotas maxStringContentLength="1048576" maxArrayLength="1048576"
-                        maxBytesPerRead="1048576" />
+                <binding name="BasicHttpBinding_IService_stu" maxBufferPoolSize="1048576" maxBufferSize="1048576" maxReceivedMessageSize="1048576">
+                    <readerQuotas maxStringContentLength="1048576" maxArrayLength="1048576" maxBytesPerRead="1048576"/>
                 </binding>
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:65271/Service_stu.svc" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_IService_stu" contract="ServiceReference2.IService_stu"
-                name="BasicHttpBinding_IService_stu" />
+            <endpoint address="http://localhost:65271/Service_stu.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService_stu" contract="ServiceReference2.IService_stu" name="BasicHttpBinding_IService_stu"/>
         </client>
     </system.serviceModel>
 </configuration>
