--- a/Exercise_form/Exercise_form.csproj
+++ b/Exercise_form/Exercise_form.csproj
@@ -79,6 +79,12 @@
     <Compile Include="addmq.Designer.cs">
       <DependentUpon>addmq.cs</DependentUpon>
     </Compile>
+    <Compile Include="addTF.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="addTF.Designer.cs">
+      <DependentUpon>addTF.cs</DependentUpon>
+    </Compile>
     <Compile Include="classinfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,6 +138,9 @@
     </Compile>
     <EmbeddedResource Include="addmq.resx">
       <DependentUpon>addmq.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="addTF.resx">
+      <DependentUpon>addTF.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="classinfo.resx">
       <DependentUpon>classinfo.cs</DependentUpon>
