--- a/Exercise_form/Exercise_form.csproj
+++ b/Exercise_form/Exercise_form.csproj
@@ -73,11 +73,23 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="addA.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="addA.Designer.cs">
+      <DependentUpon>addA.cs</DependentUpon>
+    </Compile>
     <Compile Include="addmq.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="addmq.Designer.cs">
       <DependentUpon>addmq.cs</DependentUpon>
+    </Compile>
+    <Compile Include="addS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="addS.Designer.cs">
+      <DependentUpon>addS.cs</DependentUpon>
     </Compile>
     <Compile Include="addTF.cs">
       <SubType>Form</SubType>
@@ -136,8 +148,14 @@
     <Compile Include="班级和名单.Designer.cs">
       <DependentUpon>班级和名单.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="addA.resx">
+      <DependentUpon>addA.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="addmq.resx">
       <DependentUpon>addmq.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="addS.resx">
+      <DependentUpon>addS.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="addTF.resx">
       <DependentUpon>addTF.cs</DependentUpon>
