--- a/Exercise_form/Exercise_form.csproj
+++ b/Exercise_form/Exercise_form.csproj
@@ -104,6 +104,18 @@
       <DependentUpon>classinfo.cs</DependentUpon>
     </Compile>
     <Compile Include="DB_exceltool.cs" />
+    <Compile Include="EditererList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditererList.Designer.cs">
+      <DependentUpon>EditererList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="exerList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="exerList.Designer.cs">
+      <DependentUpon>exerList.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -162,6 +174,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="classinfo.resx">
       <DependentUpon>classinfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditererList.resx">
+      <DependentUpon>EditererList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="exerList.resx">
+      <DependentUpon>exerList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
