--- a/Exercise_form/Exercise_form.csproj
+++ b/Exercise_form/Exercise_form.csproj
@@ -32,9 +32,20 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Exercise_form.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Exercise_DAL">
       <HintPath>..\Exercise_DAL\bin\Debug\Exercise_DAL.dll</HintPath>
+    </Reference>
+    <Reference Include="HtmlRenderer, Version=1.5.0.6, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlRenderer.Core.1.5.0.6\lib\net45\HtmlRenderer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="HtmlRenderer.WinForms, Version=1.5.0.6, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlRenderer.WinForms.1.5.0.6\lib\net45\HtmlRenderer.WinForms.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Data.Edm, Version=5.6.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Data.Edm.5.6.4\lib\net40\Microsoft.Data.Edm.dll</HintPath>
@@ -109,6 +120,10 @@
     <Compile Include="classinfo.Designer.cs">
       <DependentUpon>classinfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataGridViewRichTextBoxColumn.cs" />
+    <Compile Include="DataGridViewRowPainting.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="DB_exceltool.cs" />
     <Compile Include="EditererList.cs">
       <SubType>Form</SubType>
@@ -143,6 +158,7 @@
     <Compile Include="param.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RichTextBoxPrinter.cs" />
     <Compile Include="Service References\ServiceReference1\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
