--- a/Exercise_form/App.config
+++ b/Exercise_form/App.config
@@ -1,18 +1,32 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
-    </startup>
-    <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="BasicHttpBinding_IService_stu" maxBufferPoolSize="1048576" maxBufferSize="1048576" maxReceivedMessageSize="1048576">
-                    <readerQuotas maxStringContentLength="1048576" maxArrayLength="1048576" maxBytesPerRead="1048576"/>
-                </binding>
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://localhost:65271/Service_stu.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService_stu" contract="ServiceReference2.IService_stu" name="BasicHttpBinding_IService_stu"/>
-        </client>
-    </system.serviceModel>
+  <configSections>
+    
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IService_stu" maxBufferPoolSize="1048576" maxBufferSize="1048576" maxReceivedMessageSize="1048576">
+          <readerQuotas maxStringContentLength="1048576" maxArrayLength="1048576" maxBytesPerRead="1048576" />
+        </binding>
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:65271/Service_stu.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService_stu" contract="ServiceReference2.IService_stu" name="BasicHttpBinding_IService_stu" />
+    </client>
+  </system.serviceModel>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
