--- a/Exercise_form/Exercise_form.csproj
+++ b/Exercise_form/Exercise_form.csproj
@@ -65,6 +65,7 @@
       <HintPath>..\..\dll\Microsoft.Office.Interop.Excel.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
