--- a/Exercise_student/Exercise_student.csproj
+++ b/Exercise_student/Exercise_student.csproj
@@ -77,7 +77,7 @@
     <Compile Include="login.Designer.cs">
       <DependentUpon>login.cs</DependentUpon>
     </Compile>
-    <Compile Include="params.cs" />
+    <Compile Include="paramst.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RichTextBoxPrinter.cs" />
