--- a/WCFDBservice/WCFDBservice.csproj
+++ b/WCFDBservice/WCFDBservice.csproj
@@ -181,6 +181,9 @@
     <Compile Include="TFQues.cs">
       <DependentUpon>questions.tt</DependentUpon>
     </Compile>
+    <Compile Include="View_detai_exerL.cs">
+      <DependentUpon>questions.tt</DependentUpon>
+    </Compile>
     <Compile Include="View_student.cs">
       <DependentUpon>questions.tt</DependentUpon>
     </Compile>
