--- a/Exercise_form/Exercise_form.csproj
+++ b/Exercise_form/Exercise_form.csproj
@@ -168,6 +168,12 @@
     <Compile Include="MianWindows.Designer.cs">
       <DependentUpon>MianWindows.cs</DependentUpon>
     </Compile>
+    <Compile Include="NOMark.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NOMark.Designer.cs">
+      <DependentUpon>NOMark.cs</DependentUpon>
+    </Compile>
     <Compile Include="param.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -241,6 +247,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MianWindows.resx">
       <DependentUpon>MianWindows.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NOMark.resx">
+      <DependentUpon>NOMark.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
