--- a/Exercise_form/packages.config
+++ b/Exercise_form/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FreeSpire.Doc" version="7.11.0" targetFramework="net452" />
+  <package id="FreeSpire.XLS" version="10.1.0" targetFramework="net452" />
   <package id="HtmlRenderer.Core" version="1.5.0.6" targetFramework="net452" />
   <package id="HtmlRenderer.WinForms" version="1.5.0.6" targetFramework="net452" />
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net45" />
