--- a/Exercise_form/Exercise_form.csproj
+++ b/Exercise_form/Exercise_form.csproj
@@ -256,6 +256,12 @@
     <Compile Include="testlayout.Designer.cs">
       <DependentUpon>testlayout.cs</DependentUpon>
     </Compile>
+    <Compile Include="UPA.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UPA.Designer.cs">
+      <DependentUpon>UPA.cs</DependentUpon>
+    </Compile>
     <Compile Include="UPS.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -346,6 +352,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="testlayout.resx">
       <DependentUpon>testlayout.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UPA.resx">
+      <DependentUpon>UPA.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UPS.resx">
       <DependentUpon>UPS.cs</DependentUpon>
