--- a/Exercise_form/Exercise_form.csproj
+++ b/Exercise_form/Exercise_form.csproj
@@ -274,6 +274,12 @@
     <Compile Include="UPA.Designer.cs">
       <DependentUpon>UPA.cs</DependentUpon>
     </Compile>
+    <Compile Include="UPE.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UPE.Designer.cs">
+      <DependentUpon>UPE.cs</DependentUpon>
+    </Compile>
     <Compile Include="UPS.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -373,6 +379,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UPA.resx">
       <DependentUpon>UPA.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UPE.resx">
+      <DependentUpon>UPE.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UPS.resx">
       <DependentUpon>UPS.cs</DependentUpon>
