--- a/Exercise_form/App.config
+++ b/Exercise_form/App.config
@@ -35,4 +35,9 @@
        
   
   </runtime>
+
+  <appSettings>
+    <add key="WCFIP" value="http://localhost:1800/WcfDataServicequestion.svc"/>
+    
+  </appSettings>
 </configuration>
