--- a/Exercise_student/App.config
+++ b/Exercise_student/App.config
@@ -3,4 +3,12 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <appSettings>
+    <add key="psize" value="80"/>
+    
+      <add key="WCFIP" value="http://localhost:1800/WcfDataServicequestion.svc"/>
+
+    
+
+  </appSettings>
 </configuration>
