--- a/Exercise_form/App.config
+++ b/Exercise_form/App.config
@@ -38,6 +38,7 @@
 
   <appSettings>
     <add key="WCFIP" value="http://localhost:1800/WcfDataServicequestion.svc"/>
+    <add key="maxsize" value="5000000"/>  
     
   </appSettings>
 </configuration>
