--- a/Exercise_DAL/Exercise_DAL.csproj
+++ b/Exercise_DAL/Exercise_DAL.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -58,6 +60,12 @@
       <DependentUpon>Exercise_ER.tt</DependentUpon>
     </Compile>
     <Compile Include="DB_tool.cs" />
+    <Compile Include="EditTestPaper.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditTestPaper.Designer.cs">
+      <DependentUpon>EditTestPaper.cs</DependentUpon>
+    </Compile>
     <Compile Include="Exercise_ER.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -107,6 +115,11 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="EditTestPaper.resx">
+      <DependentUpon>EditTestPaper.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
