--- a/Exercise_form/Exercise_form.csproj
+++ b/Exercise_form/Exercise_form.csproj
@@ -183,6 +183,12 @@
     <Compile Include="classinfo.Designer.cs">
       <DependentUpon>classinfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="compare.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="compare.Designer.cs">
+      <DependentUpon>compare.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataGridViewRichTextBoxColumn.cs" />
     <Compile Include="DataGridViewRowPainting.cs">
       <SubType>Form</SubType>
@@ -350,6 +356,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="classinfo.resx">
       <DependentUpon>classinfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="compare.resx">
+      <DependentUpon>compare.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EditererList.resx">
       <DependentUpon>EditererList.cs</DependentUpon>
